# minos-python

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .restyled.yaml  .sonarcloud.properties  AUTHORS.md  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  RUNTHETESTS.md  SETUP.md  bitbucket-pipelines.yml  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  runthetests.rst  search.html  searchindex.js  setup.cfg  setup.py
.github/: dependabot.yml  stale.yml
.github/workflows/: docs.yml  minos-broker-kafka-publish.yml  minos-broker-kafka-tests.yml  minos-broker-rabbitmq-publish.yml  minos-broker-rabbitmq-tests.yml  minos-database-aiopg-publish.yml  minos-database-aiopg-tests.yml  minos-database-lmdb-publish.yml  minos-database-lmdb-tests.yml  minos-database-sqlalchemy-publish.yml  minos-database-sqlalchemy-tests.yml  minos-discovery-kong-publish.yml  minos-discovery-kong-tests.yml  minos-discovery-minos-publish.yml  minos-discovery-minos-tests.yml  minos-http-aiohttp-publish.yml  minos-http-aiohttp-tests.yml  minos-microservice-aggregate-docs.yml  minos-microservice-aggregate-publish.yml  minos-microservice-aggregate-tests.yml  minos-microservice-common-docs.yml  minos-microservice-common-publish.yml  minos-microservice-common-tests.yml  minos-microservice-cqrs-docs.yml  minos-microservice-cqrs-publish.yml  minos-microservice-cqrs-tests.yml  minos-microservice-networks-docs.yml  minos-microservice-networks-publish.yml  minos-microservice-networks-tests.yml  minos-microservice-saga-docs.yml  minos-microservice-saga-publish.yml  minos-microservice-saga-tests.yml  minos-microservice-transactions-publish.yml  minos-microservice-transactions-tests.yml  minos-rest-aiohttp-publish.yml  minos-rest-aiohttp-tests.yml  minos-router-graphql-publish.yml  minos-router-graphql-tests.yml  python-docs.yml  (+3 more)
_modules/: index.html
_sources/: index.md.txt
_static/: documentation_options.js
api-reference/: minos.aggregate.actions.html  minos.aggregate.aggregate.html  minos.aggregate.collections.html  minos.aggregate.contextvars.html  minos.aggregate.entities.collections.html  minos.aggregate.entities.html  minos.aggregate.entities.models.html  minos.aggregate.entities.refs.extractors.html  minos.aggregate.entities.refs.html  minos.aggregate.entities.refs.injectors.html  minos.aggregate.entities.refs.models.html  minos.aggregate.entities.refs.resolvers.html  minos.aggregate.events.entries.html  minos.aggregate.events.fields.html  minos.aggregate.events.html  minos.aggregate.events.models.html  minos.aggregate.events.repositories.abc.html  minos.aggregate.events.repositories.database.factories.html  minos.aggregate.events.repositories.database.html  minos.aggregate.events.repositories.database.impl.html  minos.aggregate.events.repositories.html  minos.aggregate.events.repositories.memory.html  minos.aggregate.exceptions.html  minos.aggregate.html  minos.aggregate.queries.html  minos.aggregate.snapshots.entries.html  minos.aggregate.snapshots.html  minos.aggregate.snapshots.repositories.abc.html  minos.aggregate.snapshots.repositories.database.factories.html  minos.aggregate.snapshots.repositories.database.html  minos.aggregate.snapshots.repositories.database.impl.html  minos.aggregate.snapshots.repositories.html  minos.aggregate.snapshots.repositories.memory.html  minos.aggregate.snapshots.services.html  minos.aggregate.testing.events.html  minos.aggregate.testing.events.repositories.factories.html  minos.aggregate.testing.events.repositories.html  minos.aggregate.testing.events.repositories.testcases.html  minos.aggregate.testing.html  minos.aggregate.testing.snapshots.html  (+286 more)
docs/: Makefile  README.md  conf.py  index.md  index.rst  make.bat  runthetests.rst  usage.rst
examples/: run.py
minos/: __init__.py
plugins/: README.md
tests/: ImportedModule.py  __init__.py  aggregate_classes.py  callbacks.py  config.yml  conftest.py  database_testcase.py  docker-compose.yml  modelClasses.py  model_classes.py  sagas.py  subaggregate_classes.py  test_aggregate_model.py  test_avro_encoder_decoder.py  test_broker.py  test_config.ini  test_config.py  test_config.yaml  test_config.yml  test_config_.yaml  test_event_manager.py  test_importlib.py  test_messages.py  test_minos_microservice_common.py  test_minos_microservice_networks.py  test_minos_microservice_saga.py  test_storage_lmdb.py  utils.py  value_objects.py  wrong_test_config.yaml  wrong_test_config.yml
tutorials/eboutique/microservices/cart/: .minos-answers.yml  Dockerfile  README.md  config.yml  pyproject.toml
tutorials/eboutique/microservices/cart/src/: __init__.py  __main__.py  aggregates.py  cli.py
tutorials/eboutique/microservices/cart/src/commands/: __init__.py  services.py
tutorials/eboutique/microservices/cart/src/commands/saga/: add_cart.py
tutorials/eboutique/microservices/cart/src/queries/: __init__.py  models.py  repository.py  schema.py  services.py
tutorials/eboutique/microservices/cart/tests/: test_cart_microservice.py
tutorials/eboutique/microservices/shipping/: .minos-answers.yml  Dockerfile  README.md  config.yml  pyproject.toml
tutorials/eboutique/microservices/shipping/src/: __init__.py  aggregates.py
tutorials/eboutique/microservices/shipping/src/commands/: __init__.py  services.py
tutorials/eboutique/microservices/shipping/src/queries/: __init__.py  services.py
tutorials/eboutique/microservices/shipping/tests/: test_aggregates.py
tutorials/eboutique/microservices/shipping/tests/test_commands/: test_services.py
tutorials/eboutique/microservices/shipping/tests/test_queries/: test_services.py
(+1719 files in other folders)
