[tool.poetry]
name = "shipping"
version = "0.1.0"
description = "Shipping Service for eboutique"
authors = ["Clariteia Devs <devs@clariteia.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = "^0.5.0"
minos-microservice-networks = "^0.5.0"
minos-microservice-aggregate = "^0.5.0"
minos-microservice-saga = "^0.5.0"
minos-microservice-cqrs = "^0.5.0"
minos-broker-kafka = "^0.5.0"
minos-discovery-minos = "^0.5.0"
typer = "^0.3.2"
SQLAlchemy = "^1.4.31"
requests = "^2.27.1"
haversine = "^2.5.1"
geopy = "^2.2.0"
nominatim = "^0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b"
isort = "^5.8.0"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"
